--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,9 @@
 :root {
   --first-color: #46A358;
-  --first-color-light: #5ba56a;
+  --first-color-light: #62a770;
   --title-color: #3D3D3D;
   --text-color: #727272;
-  --border-color: #FBFBFB;
+  --border-color: #f0f0f0;
   --body-font: "Cerapro", sans-serif;
   --biggest-font-size: 70px;
   --h2-font-size: 30px;
@@ -32,6 +32,10 @@ ul {
 
 a {
   text-decoration: none;
+}
+
+button {
+  cursor: pointer;
 }
 
 @font-face {
@@ -78,8 +82,241 @@ a {
   color: var(--text-color);
 }
 
+.btn {
+  display: inline-block;
+  padding: 10px 25px;
+  background: var(--first-color);
+  border-radius: 6px;
+  font-weight: 700;
+  font-size: var(--h5-font-size);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.btn:hover {
+  background: var(--first-color-light);
+}
+
 .container {
   max-width: 1240px;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+.main {
+  padding-top: 75px;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+}
+.header__form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 17px 0;
+}
+.header__input-line {
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  background: var(--border-color);
+  margin-right: 8px;
+  border-radius: 10px;
+  padding: 8px 0;
+}
+.header__input-line img {
+  padding: 0 10px;
+}
+.header__input-line input {
+  display: block;
+  width: 100%;
+  padding: 7px 0;
+  border: none;
+  background: transparent;
+  outline: none;
+  font-size: 15px;
+}
+.header__input-line input::-moz-placeholder {
+  font-weight: 400;
+  font-size: var(--description-text);
+  color: var(--text-color);
+}
+.header__input-line input::placeholder {
+  font-weight: 400;
+  font-size: var(--description-text);
+  color: var(--text-color);
+}
+.header__filter {
+  padding: 10px;
+  border: none;
+  border-radius: 14px;
+  background: var(--first-color);
+  cursor: pointer;
+}
+.header__list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  padding: 26px;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+}
+.header__item {
+  transition: all 0.3s ease;
+}
+.header__link {
+  display: block;
+  position: relative;
+  z-index: 10;
+  padding: 10px;
+}
+.header__icon {
+  width: 25px;
+  height: 25px;
+  fill: #D9D9D9;
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+.header__item--active {
+  transform: translateY(-48px);
+  z-index: 55;
+}
+.header__item--active .header__icon {
+  fill: #fff;
+  transform: scale(1.2);
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--first-color-light);
+}
+.nav__logo {
+  max-width: 150px;
+  height: 35px;
+  transition: all 0.3s ease;
+}
+.nav__logo:hover {
+  opacity: 0.7;
+}
+.nav__list {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+.nav__link {
+  display: block;
+  font-weight: 400;
+  font-size: var(--h5-font-size);
+  color: var(--title-color);
+  border-bottom: 2px solid transparent;
+  padding-top: 30px;
+  padding-bottom: 25px;
+  transition: all 0.3s ease;
+}
+.nav__link:hover {
+  color: var(--first-color);
+  border-color: var(--first-color);
+}
+.nav__link--active {
+  font-weight: 700;
+  border-bottom: 3px solid var(--first-color);
+}
+.nav__buttons {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.nav__button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+.nav__cart {
+  position: relative;
+}
+.nav__badge {
+  position: absolute;
+  top: -2px;
+  right: -8px;
+  text-align: center;
+  background: var(--first-color);
+  font-weight: 500;
+  font-size: 9px;
+  padding: 2px 4px;
+  border-radius: 50%;
+  color: #fff;
+  border: 3px solid #fff;
+}
+.nav__login {
+  display: flex;
+  align-items: center;
+}
+.nav__login img {
+  margin-right: 6px;
+}
+
+#marker {
+  position: absolute;
+  top: -40px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80px;
+  height: 80px;
+  background: var(--first-color);
+  box-shadow: 0 0 0 10px var(--border-color), 0 2px 0 9px var(--border-color);
+  border-radius: 50%;
+  transition: all 0.3s ease;
+}
+#marker::before {
+  content: "";
+  position: absolute;
+  top: 40px;
+  left: -35px;
+  width: 30px;
+  height: 25px;
+  background: transparent;
+  border-top-right-radius: 50px;
+  box-shadow: 4px -4px 0 4px var(--border-color);
+}
+#marker::after {
+  content: "";
+  position: absolute;
+  top: 40px;
+  right: -35px;
+  width: 30px;
+  height: 25px;
+  background: transparent;
+  border-top-left-radius: 50px;
+  box-shadow: -4px -4px 0 4px var(--border-color);
+}
+
+@media screen and (max-width: 976px) {
+  .nav__list {
+    gap: 30px;
+  }
+  .nav__buttons {
+    gap: 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  body {
+    background: var(--border-color);
+  }
+  .nav {
+    display: none;
+  }
 }/*# sourceMappingURL=style.css.map */
