--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -1,9 +1,9 @@
 :root {
   --first-color: #46A358;
-  --first-color-light: #5ba56a;
+  --first-color-light: #62a770;
   --title-color: #3D3D3D;
   --text-color: #727272;
-  --border-color: #FBFBFB;
+  --border-color: #f0f0f0;
   --body-font: "Cerapro", sans-serif;
   --biggest-font-size: 70px;
   --h2-font-size: 30px;
