--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -14,8 +14,29 @@
   color: var(--text-color);
 }
 
+.btn {
+  display: inline-block;
+  padding: 10px 25px;
+  background: var(--first-color);
+  border-radius: 6px;
+  font-weight: 700;
+  font-size: var(--h5-font-size);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+
+  &:hover {
+    background: var(--first-color-light);
+  }
+}
+
 .container {
   max-width: 1240px;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+.main {
+  padding-top: 75px;
 }
