--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,4 +4,5 @@
 @import "layout/layout";
 @import "components/header";
 @import "components/footer";
+@import "components/login";
 @import "components/mediaqueries";
