--- a/src/scss/components/_login.scss
+++ b/src/scss/components/_login.scss
@@ -1,5 +1,5 @@
 .login {
-  display: flex;
+  display: none;
   align-items: center;
   position: fixed;
   top: 0;
@@ -8,11 +8,11 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 100;
+  padding: 0px 20px;
 
   &__container {
     max-width: 500px;
     width: 100%;
-    height: 600px;
     margin: 0 auto;
     background-color: #fff;
     border-bottom: 10px solid var(--first-color);
@@ -68,6 +68,12 @@
     margin-bottom: 14px;
   }
 
+  &__label {
+    display: block;
+    position: relative;
+    margin: 17px 0;
+  }
+
   &__input {
     font-weight: 400;
     font-size: var(--description-text);
@@ -85,4 +91,101 @@
       margin: 17px 0;
     }
   }
+
+  &__eye {
+    display: none;
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+
+  &__eye--active {
+    display: block;
+  }
+
+  &__forget-password {
+    display: block;
+    text-align: end;
+    font-weight: 400;
+    font-size: var(--description-text);
+    color: var(--first-color);
+    margin-bottom: 27px;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  &__btn {
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 16px 0;
+    font-weight: 700;
+    font-size: var(--h5-font-size);
+    color: #fff;
+    background-color: var(--first-color);
+    border-radius: 5px;
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: var(--first-color-light);
+    }
+  }
+
+  &__medias {
+    max-width: 300px;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 46px;
+    padding-bottom: 58px;
+  }
+
+  &__text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 400;
+    font-size: var(--description-text);
+    color: var(--title-color);
+    margin-bottom: 27px;
+    text-align: center;
+
+    &::before,
+    &::after {
+      content: "";
+      display: block;
+      max-width: 90px;
+      width: 100%;
+      height: 1px;
+      background: var(--border-color);
+      margin: 0px 10px;
+    }
+  }
+
+  &__media {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 100%;
+    padding: 10px 0;
+    text-align: center;
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 14px;
+    color: var(--text-color);
+    margin-bottom: 15px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.login-show {
+  display: flex;
 }
