--- a/src/scss/components/_mediaqueries.scss
+++ b/src/scss/components/_mediaqueries.scss
@@ -32,9 +32,11 @@
   }
 }
 
-// Media 480px
+// MEDIA 480px
 
 @media screen and (max-width: 480px) {
+
+  // HEADER
   .header {
     &__item {
       padding: 26px 10px;
@@ -61,6 +63,58 @@
     &__item--mark svg {
       display: block;
       width: 25px;
+    }
+  }
+
+  // LOGIN
+  .login {
+    &__titles {
+      margin-bottom: 30px;
+    }
+
+    &__title {
+      font-size: 18px;
+    }
+
+    &__description {
+      font-size: 12px;
+    }
+
+    &__form {
+      padding: 0px 20px;
+    }
+
+    &__input {
+      padding: 10px;
+
+      &::placeholder {
+        font-size: 12px;
+      }
+    }
+
+    &__forget-password {
+      font-size: 12px;
+      margin-bottom: 20px;
+    }
+
+    &__btn {
+      font-size: 15px;
+      padding: 10px;
+    }
+
+    &__medias {
+      padding: 0px 20px;
+      padding-bottom: 30px;
+    }
+
+    &__text {
+      font-size: 12px;
+      margin-bottom: 20px;
+
+      &::before,
+      &::after {
+        max-width: 50px;
+      }
     }
   }
 }
