added hero styles

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,9 @@
+@import "base/font";
 @import "config/variables";
 @import "base/base";
-@import "base/font";
 @import "layout/layout";
 @import "components/header";
+@import "components/hero";
 @import "components/footer";
 @import "components/login";
 @import "components/mediaqueries";
