--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,31 @@
+@font-face {
+  font-family: "Cerapro";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("../../fonts/CeraPro-Regular.woff") format("woff");
+}
+@font-face {
+  font-family: "Cerapro";
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url("../../fonts/CeraPro-Medium.woff") format("woff");
+}
+@font-face {
+  font-family: "Cerapro";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url("../../fonts/CeraPro-Bold.woff") format("woff");
+}
+@font-face {
+  font-family: "Cerapro";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url("../../fonts/CeraPro-Black.woff") format("woff");
+}
 :root {
   --first-color: #46A358;
   --first-color-light: #62a770;
@@ -38,34 +66,6 @@ button {
   cursor: pointer;
 }
 
-@font-face {
-  font-family: "Cerapro";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url("../fonts/Fontspring-DEMO-cerapro-regular.otf") format("otf");
-}
-@font-face {
-  font-family: "Cerapro";
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url("../fonts/Fontspring-DEMO-cerapro-medium.otf") format("otf");
-}
-@font-face {
-  font-family: "Cerapro";
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url("../fonts/Fontspring-DEMO-cerapro-light.otf") format("otf");
-}
-@font-face {
-  font-family: "Cerapro";
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url("../fonts/Fontspring-DEMO-cerapro-bold.otf") format("otf");
-}
 .card-title {
   font-weight: 700;
   font-size: var(--h3-font-size);
@@ -328,6 +328,59 @@ button {
 }
 .nav__login img {
   margin-right: 6px;
+}
+
+.hero {
+  margin-top: 12px;
+  margin-bottom: 46px;
+}
+.hero__container {
+  width: 100%;
+  overflow-x: hidden;
+}
+.hero__list {
+  display: flex;
+}
+.hero__item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 40px;
+  background: var(--border-color);
+}
+.hero__information {
+  padding: 80px 0;
+  margin-right: 20px;
+}
+.hero__subtitle {
+  font-weight: 600;
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-bottom: 7px;
+}
+.hero__title {
+  font-weight: 800;
+  font-size: 60px;
+  line-height: 70px;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+}
+.hero__title span {
+  color: var(--first-color);
+}
+.hero__description {
+  max-width: 550px;
+  font-weight: 400;
+  font-size: 14px;
+  color: var(--text-color);
+  margin-bottom: 44px;
+  line-height: 24px;
+}
+.hero__image img {
+  max-width: 400px;
+  height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .login {
