--- a/src/scss/base/_font.scss
+++ b/src/scss/base/_font.scss
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("../fonts/Fontspring-DEMO-cerapro-regular.otf") format("otf")
+  src: url("../../fonts/CeraPro-Regular.woff") format("woff")
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("../fonts/Fontspring-DEMO-cerapro-medium.otf") format("otf")
+  src: url("../../fonts/CeraPro-Medium.woff") format("woff")
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url("../fonts/Fontspring-DEMO-cerapro-light.otf") format("otf")
+  src: url("../../fonts/CeraPro-Bold.woff") format("woff")
 }
 
 @font-face {
@@ -27,5 +27,5 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("../fonts/Fontspring-DEMO-cerapro-bold.otf") format("otf")
+  src: url("../../fonts/CeraPro-Black.woff") format("woff")
 }
