--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -8,7 +8,17 @@
   }
 
   &__list {
-    display: flex;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: calc((100% / 1));
+    scroll-behavior: smooth;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scrollbar-width: 0;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   &__item {
@@ -20,6 +30,7 @@
     padding-left: 40px;
     background: var(--border-color);
     overflow: hidden;
+    scroll-snap-align: start;
   }
 
   &__information {
@@ -36,9 +47,9 @@
 
   &__title {
     max-width: 510px;
-    font-weight: 800;
+    font-weight: 700;
     font-size: 55px;
-    line-height: 70px;
+    line-height: 55px;
     text-transform: uppercase;
     margin-bottom: 5px;
 
@@ -57,8 +68,23 @@
   }
 
   &__image img {
+    pointer-events: none;
     max-width: 400px;
-    height: 550px;
+    height: 450px;
     object-fit: cover;
   }
+}
+
+.hero__list.no-transition {
+  scroll-behavior: auto;
+}
+
+.hero__list.dragging {
+  scroll-snap-type: none;
+  scroll-behavior: auto;
+}
+
+.hero__list.dragging .hero__item {
+  cursor: grab;
+  user-select: none;
 }
