--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -1,6 +1,6 @@
 :root {
   --first-color: #46A358;
-  --first-color-light: #d0eed6;
+  --first-color-light: #C9EADB;
   --title-color: #3D3D3D;
   --text-color: #727272;
   --border-color: #f3f3f3;
