--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 @import "layout/layout";
 @import "components/header";
 @import "components/hero";
+@import "components/catalog";
 @import "components/footer";
 @import "components/login";
 @import "components/mediaqueries";
